# Minecraft-Clone-OpenGL

./: .gitignore  .gitmodules  Application _new.cpp  CMakeLists.txt  MinecraftCloneOpenGL.sln  MinecraftCloneOpenGL.vcxproj  MinecraftCloneOpenGL.vcxproj.filters  Minecraft_new.cpp  Minecraft_new.hpp  README.md
Draft/: Application _new.cpp  Minecraft_new.cpp  Minecraft_new.hpp
res/shaders/: Basic.shader  Blocks.shader  Color.shader  Text.shader
src/: Application.cpp  Controls.cpp  Controls.h  Minecraft.cpp  Minecraft.hpp  Renderer.cpp  Renderer.h  Shader.h  Texture.h  VertexBuffer.h
src/game/: Chunck.cpp  Chunck.h  Chunck.hpp  Chunk.cpp  Chunk.hpp  Constants.hpp  Map.cpp  Map.hpp  World.cpp  World.hpp
src/graphics/: Controls.cpp  Controls.h  Crossair.cpp  Crossair.hpp  Image.cpp  Image.hpp  IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Text.cpp  Text.hpp  Texture.cpp  Texture.h  Utility.hpp  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.cpp  VertexBufferLayout.h  VertexIndexBufferCouple.cpp  VertexIndexBufferCouple.hpp
src/menu/: MainMenu.cpp  MainMenu.hpp
